2-microsvc-ingress.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microsvc-test
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: microsvc-test
          servicePort: 8080
      - path: /microsvc-test
        backend:
          serviceName: microsvc-test
          servicePort: 8080
      - path: /james
        backend:
          serviceName: microsvc-test
          servicePort: 8080
